# contrastive-curriculum-mmlu-with-adaptive-difficulty-sampling

./: .gitignore  ABLATION_RESULTS.md  CHECKLIST.md  IMPROVEMENTS.md  PROJECT_SUMMARY.md  README.md  VALIDATION.md  VALIDATION_REPORT.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
results/: results.json
results/full_model/: detailed_predictions.json  evaluation_results.json
scripts/: evaluate.py  predict.py  train.py
src/contrastive_curriculum_mmlu_with_adaptive_difficulty_sampling/: __init__.py
src/contrastive_curriculum_mmlu_with_adaptive_difficulty_sampling/evaluation/: __init__.py  analysis.py  metrics.py
src/contrastive_curriculum_mmlu_with_adaptive_difficulty_sampling/models/: __init__.py  components.py  model.py
src/contrastive_curriculum_mmlu_with_adaptive_difficulty_sampling/scripts/: __init__.py  evaluate.py  predict.py  train.py
src/contrastive_curriculum_mmlu_with_adaptive_difficulty_sampling/training/: __init__.py  trainer.py
src/contrastive_curriculum_mmlu_with_adaptive_difficulty_sampling/utils/: config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
